--- a/dark.css
+++ b/dark.css
@@ -605,6 +605,10 @@ code.anatomy span {
   --color: var(--red-base);
 }
 
+.blue {
+  --color: var(--blue-base);
+}
+
 .pink {
   --color: var(--pink-base);
 }
@@ -617,8 +621,27 @@ code.anatomy span {
   --color: var(--green-base);
 }
 
+.grey {
+  --color: var(--grey-base);
+}
+
+table.anatomy {
+  white-space: pre-line;
+  font-family: 'Source Code Pro';
+  font-size: 120%;
+  border-spacing: 0;
+}
+
+table.anatomy td {
+  padding: 0; margin: 0;
+}
+
 code.anatomy > span > aside {
   transform: translateY(calc(var(--depth) * 40%));
+}
+
+code.anatomy > span > span {
+  filter: brightness(120%);
 }
 
 code.anatomy > span > span > aside {
