--- a/apollo-light.css
+++ b/apollo-light.css
@@ -1,10 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,300;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,400;0,700;1,300;1,700&display=swap');
 
 @import "apollo-colors.css";
 @import "anatomy.css";
 
 :root {
-  font-family: Source Sans Pro,sans-serif;
   --body-font-family: Source Sans Pro,sans-serif;
   background: var(--body-background-color);
   color: var(--body-text-color);
